--- a/Library_Management_System/Library_Management_System.csproj
+++ b/Library_Management_System/Library_Management_System.csproj
@@ -46,6 +46,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Authors\AuthorsManager.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Authors\AuthorsManager.Designer.cs">
+      <DependentUpon>AuthorsManager.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Books\BooksManager.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Books\BooksManager.Designer.cs">
+      <DependentUpon>BooksManager.cs</DependentUpon>
+    </Compile>
     <Compile Include="Dashboard.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -58,6 +70,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="PublisingHouse\PublishingHouseManager.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="PublisingHouse\PublishingHouseManager.Designer.cs">
+      <DependentUpon>PublishingHouseManager.cs</DependentUpon>
+    </Compile>
     <Compile Include="RJButton.cs">
       <SubType>Component</SubType>
     </Compile>
@@ -67,6 +85,9 @@
     <Compile Include="RoundedButtonControl.cs">
       <SubType>Component</SubType>
     </Compile>
+    <EmbeddedResource Include="Books\BooksManager.resx">
+      <DependentUpon>BooksManager.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Dashboard.resx">
       <DependentUpon>Dashboard.cs</DependentUpon>
     </EmbeddedResource>
@@ -92,5 +113,6 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
