DataBase.cs veri tabanı için dosya eklendi

--- a/Library_Management_System/Library_Management_System.csproj
+++ b/Library_Management_System/Library_Management_System.csproj
@@ -100,6 +100,7 @@
     <Compile Include="Dashboard.Designer.cs">
       <DependentUpon>Dashboard.cs</DependentUpon>
     </Compile>
+    <Compile Include="Database.cs" />
     <Compile Include="GradientPanel.cs">
       <SubType>Component</SubType>
     </Compile>
